--- a/shared.css
+++ b/shared.css
@@ -35,6 +35,7 @@ body{
     font-size: 1.3rem;
     display: inline-block;
     width: 1.3rem;
+    vertical-align: middle;
 }
 
 .main-header__brand img{
@@ -47,10 +48,32 @@ body{
     vertical-align: middle;
 }
 
+.toggle-button{
+    width: 3rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+}
+
+.toggle-button:focus{
+    outline: none;
+}
+
+.toggle-button__bar{
+    width: 100%;
+    height: 0.2rem;
+    background: black;
+    display: block;
+    margin: 0.6rem 0;
+}
+
 .main-nav{
     display: inline-block;
     text-align: right;
-    width: calc(100% - 75px);
+    width: calc(100% - 122px);
     vertical-align: middle;
 }
 
@@ -65,9 +88,11 @@ body{
     margin: 0 1rem;
 }
 
+.main-nav__item a,
 .main-nav__item a{
     text-decoration: none;
     color: #0e4f1f;
+    font-weight: bold;
     padding: 0.2rem 0;
 }
 
@@ -77,7 +102,8 @@ body{
     border-bottom: 5px white solid;
 }
 
-.main-nav__item--cta a{
+.main-nav__item--cta a,
+.mobile-nav__item--cta a{
     color:white;
     background: #ff1b68;
     padding: 0.5rem 1rem;
@@ -85,10 +111,40 @@ body{
 }
 
 .main-nav__item--cta a:hover,
-.main-nav__item--cta a:active{
+.main-nav__item--cta a:active,
+.mobile-nav__item--cta a:hover,
+.mobile-nav__item--cta a:active{
     background: white;
     color: #ff1b68;
     border: none;
+}
+
+.mobile-nav{
+    display: none;
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    background: white;
+    width: 80%;
+    height: 100vh;
+}
+
+.mobile-nav__items{
+    width: 90%;
+    height: 100%;
+    list-style: none;
+    margin: 10% auto;
+    padding: 0;
+    text-align: center;
+}
+
+.mobile-nav__item{
+    margin: 1rem 0;
+}
+
+.mobile-nav__item a{
+    font-size: 1.5rem;
 }
 
 .button{
@@ -138,4 +194,12 @@ button:focus{
 .main-footer__link a:hover,
 .main-footer__link a:active{
     color:#ccc;
+}
+
+.open{
+    display: block !important;
+    /* the reason for the !important is that since 
+       this property is needed for classes that are in the main
+       css file, it overwrites the open class because it's at the same
+       specifity (talking for the js document)*/
 }
