--- a/main.css
+++ b/main.css
@@ -53,7 +53,6 @@
     /*background-image: linear-gradient(to left bottom, red, yellow, blue);*/
     height: 33vh;
     width: 100vw;
-    margin-top: 2.5rem;
     position: relative;
 }
 
@@ -63,6 +62,17 @@
     position: absolute;
     bottom: 0;
     left: 5%;
+    font-size: 1.6rem;
+}
+
+@media (max-width: 40rem) and (min-height: 40rem){
+    #product-overview{
+        height: 40vh;
+        background-position: 50% 25%;
+    }
+    #product-overview h1{
+        font-size: 3rem;
+    }
 }
 
 .section-title{
@@ -74,22 +84,13 @@
     background: #d5ffdc;
     text-align: center;
     padding: 1rem;
-    margin: 0.5rem;
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
-}
-
-.plan__list{
-    width: 80%;
-    margin: auto;
-    text-align: center;
+    margin: 0.5rem 0;
+    width: 100%;
 }
 
 .plan--highlighted{
     background: #19b84c;
     color: white;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__title{
@@ -125,6 +126,25 @@
     margin: 0.6rem 0;
 }
 
+@media (min-width: 40rem){
+    .plan__list{
+    width: 100%;
+    text-align: center;
+    }
+
+    .plan{
+        display: inline-block;
+        width: 30%;
+        vertical-align: middle;
+        min-width: 13rem;
+        max-width: 25rem;
+    }
+
+    .plan--highlighted{
+        box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    }
+}
+
 #key-features{
     background: #ff1b68;
     margin-top: 5rem;
@@ -140,15 +160,21 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    text-align: center;
+    /*text-align: center;*/
 }
 
-.key-feature{
-    display: inline-block;
-    width: 30%;
-    vertical-align: top;
-}
+@media (min-width: 40rem){
+    .key-feature__list{
+        text-align: center;
+    }
 
+    .key-feature{
+        display: inline-block;
+        width: 30%;
+        vertical-align: top;
+        max-width: 25rem;
+    }
+}
 .key-feature__description{
     text-align: center;
     font-weight: bold;
