--- a/packages/packages.css
+++ b/packages/packages.css
@@ -10,7 +10,6 @@ main{
     height: 100vh;
     position: fixed;
     z-index: -1;
-
 }
 
 /* if I changed the value of the z-index property of the 
@@ -24,14 +23,14 @@ main{
     width: 80%;
     margin: 1rem 0;
     border: 4px solid #0e4f1f;
+    border-left: none;
     position: relative;
-    z-index: 0;
 }
 
 .package:hover,
-.package:active{
+.package:active {
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-    border-color:#ff5454 !important;
+    border-color:#ff5454;/* !important*/
 }
 
 /* 
@@ -85,10 +84,42 @@ main{
     text-align: right;
 }
 
+#free:hover,
+#free:active{
+    border-left-color: #ff5454;
+}
+
 #premium{
     background: rgba(14, 79, 31, 0.95);
 }
 
+#premium .package__title {
+    color: white;
+}
+
 #premium .package__subtitle{
     color: #bbb;
+}
+
+@media(min-width: 40rem){
+    main {      
+      max-width: 1500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+}
+
+@media(min-width: 1500px){
+    .package{
+        border-left: 4px solid #0e4f1f;
+    }
+
+    #free{
+        border-right: 4px solid #0e4f1f;
+    }
+
+    #free:hover,
+    #free:active{
+        border-right-color: #ff5454;
+    }
 }
