--- a/shared.css
+++ b/shared.css
@@ -8,6 +8,11 @@ body{
     overflow-x: hidden;
 }
 
+main{
+    min-height: calc(100vh - 3.5rem - 8rem);
+    margin-top: 3.5rem;
+}
+
 .backdrop{
     position: fixed;
     display: none;
@@ -32,14 +37,13 @@ body{
     color: #0e4f1f;
     text-decoration: none;
     font-weight: bold;
-    font-size: 1.3rem;
+    height: 2.5rem;
     display: inline-block;
     width: 1.3rem;
     vertical-align: middle;
 }
 
 .main-header__brand img{
-    width: 100%;
     height: 100%;
 }
 
@@ -48,36 +52,12 @@ body{
     vertical-align: middle;
 }
 
-.toggle-button{
-    width: 3rem;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    padding-top: 0;
-    padding-bottom: 0;
-    vertical-align: middle;
-}
-
-.toggle-button:focus{
-    outline: none;
-}
-
-.toggle-button__bar{
-    width: 100%;
-    height: 0.2rem;
-    background: black;
-    display: block;
-    margin: 0.6rem 0;
-}
-
 .main-nav{
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 122px);
-    vertical-align: middle;
+    display: none;
 }
 
 .main-nav__items{
+    display: inline-block;
     padding:0;
     margin: 0;
     list-style: none;
@@ -117,6 +97,28 @@ body{
     background: white;
     color: #ff1b68;
     border: none;
+}
+
+.toggle-button{
+    width: 3rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+}
+
+.toggle-button:focus{
+    outline: none;
+}
+
+.toggle-button__bar{
+    width: 100%;
+    height: 0.2rem;
+    background: black;
+    display: block;
+    margin: 0.6rem 0;
 }
 
 .mobile-nav{
@@ -182,8 +184,8 @@ button:focus{
 }
 
 .main-footer__link{
-    display: inline-block;
-    margin: 0 1rem;
+    display: block;
+    margin: 1rem 0;
 }
 
 .main-footer__link a{
@@ -202,4 +204,22 @@ button:focus{
        this property is needed for classes that are in the main
        css file, it overwrites the open class because it's at the same
        specifity (talking for the js document)*/
+}
+
+@media (min-width: 40rem){
+    .toggle-button{
+        display: none;
+    }
+
+    .main-nav{
+        display: inline-block;
+        text-align: right;
+        width: calc(100% - 44px);
+        vertical-align: middle;
+    }    
+
+    .main-footer__link{
+        display: inline-block;
+        margin: 0 1rem;
+    }
 }
