--- a/main.css
+++ b/main.css
@@ -129,19 +129,28 @@
 @media (min-width: 40rem){
     .plan__list{
     width: 100%;
-    text-align: center;
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    }   
 
     .plan{
-        display: inline-block;
         width: 30%;
-        vertical-align: middle;
         min-width: 13rem;
         max-width: 25rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 55vh;
+        margin: 0 0.3rem;
     }
-
+    /* z-index and height*/
     .plan--highlighted{
         box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+        height: 65vh;
+        z-index: 2;
     }
 }
 
@@ -164,14 +173,17 @@
 }
 
 @media (min-width: 40rem){
+    /*flex container*/
     .key-feature__list{
-        text-align: center;
+        /*text-align: center;*/
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
     }
-
+    
     .key-feature{
-        display: inline-block;
         width: 30%;
-        vertical-align: top;
         max-width: 25rem;
     }
 }
