--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,3 +1,14 @@
+@font-face{
+    font-family: "AnonymousPro";
+    src: url("anonymousPro-Regular.ttf") format("truetype");
+}
+
+@font-face{
+    font-family: "AnonymousPro";
+    src: url("anonymousPro-Bold.ttf") format("truetype");
+    font-weight: 700;
+}
+
 main{
     padding-top: 2rem;
 }
@@ -63,9 +74,11 @@ main{
 .package__description{
     padding:1rem;
     border: 1px solid #0e4f1f;
-    font-size: 1.2rem;
     color: #0e4f1f;
     background: white;
+    font-size: 1.2rem;
+    /*font-style font-variant font-weight font-size/line-height font-family*/
+    /*text-shadow: 2px 2px 4px rgb(185, 180, 180);*/
 }
 
 .clearfix{
